test/compile_errors/err_fstring_spec_str_mode_on_int.w
//! expect-check-fail: format mode requires string type
fn main:
    let x = 42
    print(f"{x:s}")
